package main

// Vehiculo es la estructura principal y contiene un Auto
type Vehiculo struct {
    Marca string
    Auto  Auto
}