package main

// Moto es una subestructura de Auto
type Moto struct {
    Auto
    Cilindrada int
}